# omnitech-siem-setup

./: .gitignore  00-preflight.sh  00-vars.env.example  01-base.sh  02-mongodb.sh  03-opensearch.sh  04-graylog.sh  05-nginx-tls.sh  06-firewall.sh  07-inputs.sh  08-backup.sh  09-snmpd.sh  10-graylog-model.sh  11-graylog-enrichment.sh  12-graylog-pipelines.sh  13-graylog-alerts.sh  14-graylog-dashboards.sh  15-rapport-hebdo.sh  16-m365-input.sh  17-m365-fetcher.sh  18-m365-activity.sh  19-vsphere.sh  21-alert-hygiene.sh  22-alert-routing.sh  30-backup-config.sh  31-retention-iso.sh  32-disk-guard.sh  33-ldaps-auth.sh  34-weekly-report.sh  35-canary.sh  36-soar.sh  37-mitre-attack.sh  38-vuln-scan.sh  39-collect-health.sh  40-purge-logs.sh  40-ueba-ndr.sh  41-retention-iso.sh  42-carte-cyber.sh  43-ndr-dns.sh  44-incidents.sh  (+71 more)
oms-graph/: .gitignore  README.md  config.yaml  pyproject.toml
oms-graph/deploy/: oms-graph-respond.service  oms-graph-respond.timer  oms-graph.service  oms-graph.timer
oms-graph/oms_graph/: __init__.py  gelf.py  graph.py  opensearch.py  response.py  run.py
oms-graph/tests/: test_graph.py  test_response.py
oms-ml/: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
oms-ml/deploy/: oms-ml-anomaly.service  oms-ml-anomaly.timer  oms-ml-fp.service  oms-ml-fp.timer
oms-ml/oms_ml/: __init__.py  anomaly.py  features.py  fpscore.py  gelf.py  run.py
oms-ml/tests/: conftest.py  test_anomaly.py  test_fpscore.py
oms-xdr/: .gitignore  BRIEF.md  Makefile  README.md  config.yaml  pyproject.toml
oms-xdr/deploy/: oms-netscan-full.service  oms-netscan-full.timer  oms-netscan-quick.service  oms-netscan-quick.timer  oms-xdr.env.example  oms-xdr.service  oms-xdr.timer  setup_graylog.sh
oms-xdr/docs/: INTEGRATION-OMNITECH.md  ROADMAP.md
oms-xdr/oms_xdr/: __init__.py  config.py  correlation.py  engine.py  enrich.py  graylog_client.py  netscan.py  remediation.py  responder.py  rules.yaml
(+110 files in other folders)
